<resources>
    <string name="app_name">GivvApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Password</string>
    <string name="login_input_label">Login</string>
    <string name="no_account_input">No Account yet? Create one here.</string>
    <string name="givv_logo_description">logo image for givv</string>
    <string name="name_signup">Name</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password for signup</string>
    <string name="create_account_signup">Create Account</string>
    <string name="member_login">Already a member? Login</string>


</resources>
